<resources>
    <string name="app_name">AndroidBasicSummary</string>
    <string name="select_phone">选择照片</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="string_welcome">Nice to meet you!</string>
    <string name="string_start_service">Start Service</string>
    <string name="string_stop_service">Stop Service</string>
    <string name="string_bind_service">Bind Service</string>
    <string name="string_unbind_service">Unbind Service</string>
    <string name="string_android_basic">安卓基础</string>
    <string name="action_settings">Settings</string>
    <string name="jump_to_fade_notifaction_service">Jump to fade notifaction service</string>
    <string name="move_my_heart_by_xuan">萱动我心</string>
    <string name="the_oath_of_love">弱水三千只娶萱</string>
    <string name="start_intentservice">Start intentService</string>
    <string name="title_activity_progressbar">ProgressbarActivity</string>
    <string name="string_create_qrcode">生成二维码</string>
    <string name="string_save_qrcode">保存二维码</string>
    <string name="permissIntro">权限说明</string>
    <string name="permissIntroContent">保存二维码需要用到存储权限，如果不授予可能会影响正常使用！</string>
    <string name="permiss_phone_state_content">获取手机唯一识别码需要获取您的设备状态权限！</string>
    <string name="permissGive">赋予权限</string>
    <string name="qrcode_content">二维码内容：</string>
    <string name="please_input_qrcode_content">请输入二维码内容</string>
    <string name="qrcode_width">二维码宽度：</string>
    <string name="qrcode_default_width">默认650</string>
    <string name="qrcode_height">二维码高度：</string>
    <string name="qrcode_default_height">默认650</string>
    <string name="fault_tolerance">容错率：</string>
    <string name="blank_magin">空白边距：</string>
    <string name="black_block">黑色色块：</string>
    <string name="white_block">白色色块：</string>
    <string name="select_logo">选取logo</string>
    <string name="select_img_for_black_block">选取代替黑色色块的图片</string>
    <string name="generate_qrcode">生成二维码</string>
    <string name="msg_no_camera">您的手机没有安装相机相关应用哟</string>
</resources>
