<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyServiceActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Hello World!"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_start_service"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_stop_service"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_bind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_bind_service"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_unbind_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_unbind_service"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_jump_to_fade_notifaction_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jump_to_fade_notifaction_service"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_start_intent_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intentservice"
        android:textAllCaps="false" />

</LinearLayout>